@@ -63,6 +63,18 @@ class WikiPlugin_OldStyleTable
         );
     }
 
+    /**
+     * return links
+     *
+     * @param  string $argstr   The plugin argument string.
+     * @param  string $basepage The pagename the plugin is invoked from.
+     * @return array  List of pagenames linked to.
+     */
+    function getWikiPageLinks($argstr, $basepage)
+    {
+        return getTextLinks($argstr);
+    }
+
     function handle_plugin_args_cruft($argstr, $args)
     {
     }
