@@ -1,4 +1,4 @@
-Date: Thu,  9 Dec 2021 18:48:34 +0000
+Date: Wed, 16 Feb 2022 19:23:05 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.6.1)
 Content-Type: application/x-phpwiki;
   pagename=Help%2FBackLinksPlugin;
@@ -59,8 +59,8 @@ All [[Help:PageList|PageList]] arguments, plus the following ones:
 
 == Known Problems ==
 
-Back links will not be found if the link is inside a table, or in an included template,
-or in general if the link is in text generated by a plugin.
+Back links might not work if the link is in text generated by a plugin.
+Prior to ~PhpWiki 1.6.2, back links did not work if the link was inside a table, or in an included template,
 
 == Author ==
 * [[Help:Reini Urban|Reini Urban]]
